# programmers-are-people-too

./: .gitignore  ideas.md  readme.md  tsconfig.json
.github/: copilot-instructions.md
code/generic_dotnet/: Program.cs
code/nvim/programmers-are-people-too/: README.md  cache.lua  collector.lua  config.lua  counter.lua  file_writer.lua  formatter.lua  init.lua  notify.lua  solved_display.lua
code/nvim/programmers-are-people-too/docs/: NOTIFICATION_SETUP.md
code/vscode/: CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  playground.html  sparkle.html
code/vscode/.vscode-hacks/: custom.css  custom.js
code/vscode/example/: index.html
code/vscode/example/cpp/: CMakeLists.txt  main.cpp
code/vscode/scripts/: copy-assets.js
code/vscode/src/: animations.ts  extension.ts  motivationalPanel.ts  statistics.ts
documentation/: idea.md
documentation/presentation/: index.html  package-lock.json  package.json
presentation/: custom.css  index.html  standalone.html
